--- a/NTNU GO/app/src/main/res/layout/activity_splash.xml
+++ b/NTNU GO/app/src/main/res/layout/activity_splash.xml
@@ -4,10 +4,13 @@
     android:layout_height="fill_parent"
     android:background="#ffffff">
 
-    <ImageView android:id="@+id/splashscreen" android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/splashscreen"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/ntnu_mple_splashscreen4"
         android:layout_gravity="center"
-        android:background="#ffffff" />
+        android:background="#ffffff"
+        android:src="@drawable/ntnu_go"
+        />
 
 </LinearLayout>
