--- a/NTNU GO/app/src/main/res/layout/activity_todo_list.xml
+++ b/NTNU GO/app/src/main/res/layout/activity_todo_list.xml
@@ -1,44 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:gravity="center">
+    android:orientation="vertical">
 
     <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:gravity="top">
-
-    <EditText
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/editText"
-        android:layout_alignBottom="@+id/buttonAdd" />
+        android:orientation="vertical">
 
-        <Button
+        <EditText
+            android:id="@+id/editText"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="Add Item"
-            android:id="@+id/buttonAdd" />
+            android:layout_alignBottom="@+id/buttonAdd" />
 
-        <ListView
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/buttonAdd"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/listView"
-            android:layout_gravity="center_horizontal" />
-
+            android:text="Add Item" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:gravity="bottom">
+        android:layout_height="wrap_content"
+        android:layout_weight="0.1"
+        android:orientation="horizontal">
 
+        <ListView
+            android:id="@+id/listView"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:dividerHeight="2px" />
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:orientation="horizontal">
 
-</RelativeLayout>
+
+        <Button
+            android:id="@+id/buttonAdd2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Clear done tasks" />
+
+        <Button
+            android:id="@+id/buttonAdd3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Delete all tasks" />
+    </LinearLayout>
+
+</LinearLayout>
+
 
