Updated button name and Commented out two buttons
Updated button name from buttonPopup to buttonPopupSchoolYear
Commented out button delete all tasks and delete done tasks from
overflow menu

--- a/NTNU GO/app/src/main/res/menu/todolistmenu.xml
+++ b/NTNU GO/app/src/main/res/menu/todolistmenu.xml
@@ -3,7 +3,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:combat="http://schemas.android.com/apk/res-auto">
 
-    <item
+<!--    <item
         android:id="@+id/buttonDelete"
         android:title="Delete done tasks"
         combat:showAsAction="never">
@@ -13,10 +13,10 @@
         android:id="@+id/buttonDeleteAll"
         android:title="Delete all tasks"
         combat:showAsAction="never">
-    </item>
+    </item>-->
 
     <item
-        android:id="@+id/buttonPopup"
+        android:id="@+id/buttonPopupSchoolYear"
         android:title="Student's year of study"
         combat:showAsAction="never">
     </item>
