--- a/NTNU GO/app/src/main/res/layout/activity_todo_list.xml
+++ b/NTNU GO/app/src/main/res/layout/activity_todo_list.xml
@@ -44,13 +44,13 @@
 
 
         <Button
-            android:id="@+id/buttonAdd2"
+            android:id="@+id/buttonClearAllDoneTasks"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Clear done tasks" />
 
         <Button
-            android:id="@+id/buttonAdd3"
+            android:id="@+id/buttonDeleteAllTasks"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Delete all tasks" />
